button no longer cut off

--- a/css/main.css
+++ b/css/main.css
@@ -14,7 +14,6 @@ html, button, input, select, textarea {
 html, body {
   background-color: #EEEEEE;
   font-family: Arial, sans-serif;
-  overflow: hidden;
 }
 
 html, body, canvas {
